Attempted fix on Safari mobile nav attachment

--- a/css/styles.css
+++ b/css/styles.css
@@ -280,6 +280,7 @@ nav {
     height: 9.5rem;
     background-color: #f9f9f9;
     position: sticky;
+    position: -webkit-sticky;
     top: 0;
     z-index: 999;
     transition: 0.4s border-bottom ease;
